Changed AddTaskActivity's windowSoftInputMode to adjustPan to avoid the keyboard pushing the elements in the layout up

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:exported="false" />
         <activity
             android:name=".AddTaskActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".EditTaskActivity"
             android:exported="false" />
