Created a package called "friends" and moved all friends related activites to that package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name=".login.CreateUserActivity"
             android:exported="false" />
         <activity
-            android:name=".FriendsActivity"
+            android:name=".friends.FriendsActivity"
             android:exported="false" />
         <activity
             android:name=".task.TaskActivity"
