--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,39 +13,46 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity
-            android:name="com.example.collectivecleaningorganizer.ui.collective.SpecificCollectiveActivity"
-            android:exported="false" />
-        <activity
-            android:name="com.example.collectivecleaningorganizer.ui.collective.CollectiveActivity"
-            android:exported="false" />
-        <activity
-            android:name="com.example.collectivecleaningorganizer.ui.login.ForgotPasswordActivity"
+            android:name=".LogOutActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name="com.example.collectivecleaningorganizer.ui.task.TaskOverviewActivity"
+            android:name=".ui.collective.SpecificCollectiveActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.collectivecleaningorganizer.ui.task.AddTaskActivity"
+            android:name=".ui.collective.CollectiveActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.ForgotPasswordActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.task.TaskOverviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.task.AddTaskActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.example.collectivecleaningorganizer.ui.task.EditTaskActivity"
+            android:name=".ui.task.EditTaskActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.collectivecleaningorganizer.ui.login.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.collectivecleaningorganizer.ui.login.CreateUserActivity"
+            android:name=".ui.login.CreateUserActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.collectivecleaningorganizer.ui.friends.FriendsActivity"
+            android:name=".ui.friends.FriendsActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.collectivecleaningorganizer.ui.task.TaskActivity"
+            android:name=".ui.task.TaskActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
