Renamed the addtaskactivity to CreateTaskActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:name=".ui.task.TaskOverviewActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.task.AddTaskActivity"
+            android:name=".ui.task.CreateTaskActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustPan" />
         <activity
