--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity
+            android:name=".CollectiveRemoveMembers"
+            android:exported="false" />
+        <activity
             android:name=".ui.collective.CollectiveInviteUsers"
             android:exported="false" />
         <activity
