--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,17 @@
         <activity
             android:name=".ui.collective.CollectiveRemoveMembers"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.collective.CollectiveInviteUsers"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".LogOutActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.app.lib_name"
@@ -32,14 +35,17 @@
         <activity
             android:name=".ui.collective.SpecificCollectiveActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.collective.CollectiveActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.login.ForgotPasswordActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.app.lib_name"
@@ -48,34 +54,42 @@
         <activity
             android:name=".ui.task.TaskOverviewActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.task.CreateTaskActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.task.EditTaskActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.login.CreateUserActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.friends.FriendsActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.friends.FriendRequestsActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.task.TaskActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".MainActivity"
